fixed search page visibility

--- a/style.css
+++ b/style.css
@@ -113,7 +113,6 @@ a:hover {
 
 .search {
 	clear:both;
-	display:none;
 }
 
 .screen-reader-text {
